# AlisonReynolds_Project4

./: Cargo.toml  Makefile  README.md
.github/workflows/: tests.yml
src/: lib.rs  main.rs
src/data/: heat_alerts.csv  rdu_daily.csv
tests/: cli.rs
