[package]
name = "big_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
polars = {version = "0.27.2"}
linfa = "0.6.1"
linfa-elasticnet = "0.6.1"
rand = "0.8.5"