[package]
name = "big_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
polars = {version = "0.28.0"}
smartcore = "0.3.1"
ndarray = "0.15.4"
polars-core = {version = "0.28.0", features=["ndarray"]}
arrow = "36.0.0"
serde = "1.0.126"
serde_derive = "1.0.126"